--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "obioma-api",
+  "name": "invoice-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -27,7 +27,10 @@
     "path": "^0.12.7",
     "sendgrid": "^5.2.3",
     "sharp": "^0.21.1",
+    "shorthash": "0.0.2",
     "twilio": "^3.30.3",
+    "uniqid": "^5.0.3",
+    "unique-random": "^2.1.0",
     "validator": "^10.9.0"
   },
   "devDependencies": {
