--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
+    "git-cz": "^3.2.1",
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.16",
